Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16495

mariadb segfaults at start on FreeBSD

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.3.7, 10.3.8
    • 10.3.9
    • Platform FreeBSD
    • None
    • FreeBSD

    Description

      mariadb 10.3.7 crashes straight away on freebsd, doesnt matter if upgrading from 10.2 or starting fresh. I dont get any output to logs either.
      FreeBSD version for me is 11.1, ive also tested on another computer with same results.
      And then add alot of users on #freebsd who had the same issue.

      here is output from truss
      https://pastebin.com/bkTRnWMh

      to reproduce just install mariadb10.3 from ports (pkg install mariadb103-server)
      and /usr/local/etc/rc.d/mysql-server onestart

      Attachments

        Activity

          People

            serg Sergei Golubchik
            sopparus sippanson bernt
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 10m
                10m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.