MDEV-16495 -- Fix mariadb segfaults at start on FreeBSD