sql/semisync_master_ack_receiver.cc
@@ -44,7 +44,7 @@ Ack_receiver::Ack_receiver()
 
   m_status= ST_DOWN;
   mysql_mutex_init(key_LOCK_ack_receiver, &m_mutex,
-                   MY_MUTEX_INIT_FAST);
+                   NULL);
   mysql_cond_init(key_COND_ack_receiver, &m_cond, NULL);
   m_pid= 0;
 
